# SUPERIOR_StereoGram

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
depthforge/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
depthforge/cli/: __init__.py  main.py
depthforge/comfyui/: __init__.py  nodes.py  swirls_nodes.py
depthforge/comfyui/workflows/: DEPTH_MAP_GUIDE.md  README.md  anaglyph_redcyan.json  anaglyph_redcyan.md  full_pipeline.json  full_pipeline.md  hidden_image.json  hidden_image.md  preset_workflow.json  preset_workflow.md  qr_stereogram.json  qr_stereogram.md  safety_check.json  safety_check.md  sirds_basic.json  sirds_basic.md  stereo_pair.json  stereo_pair.md  texture_pattern.json  texture_pattern.md
depthforge/core/: __init__.py  adaptive_dots.py  anaglyph.py  comfort.py  depth_prep.py  export.py  export_profiles.py  flash_safety.py  gpu_synthesizer.py  hidden_image.py  inpainting.py  lut.py  motion_smooth.py  optical_flow.py  parallel.py  pattern_cache.py  pattern_gen.py  pattern_library.py  presets.py  qc.py  stereo_pair.py  synthesizer.py  temporal.py  tiled_render.py
depthforge/depth_models/: __init__.py  midas.py  zoedepth.py
depthforge/docs/: ALGORITHM.md  API_REFERENCE.md  SAFETY.md  TROUBLESHOOTING.md  USER_GUIDE.md
depthforge/io/: __init__.py  formats.py
depthforge/nuke/: __init__.py  gizmo.py  toolbar.py
depthforge/ofx/: CMakeLists.txt  __init__.py  plugin.cpp  plugin.h  plugin_bridge.py
depthforge/ofx/include/: ofx_minimal.h
depthforge/patterns/: __init__.py
depthforge/presets/: __init__.py
depthforge/tests/: test_flash_safety.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  visual_gallery.py
depthforge/video/: __init__.py
depthforge/web/: __init__.py  app.py  ui.py
docs/: CHANGELOG.md  USER_GUIDE.md
docs/html/: cli-workflow.html  comfyui-workflow.html  index.html  installation.html  nuke-workflow.html  reference.html  samples.html
docs/html/samples/: generate_samples.py
examples/: quickstart.py
tests/: test_phase1.py  test_phase2.py  test_phase4.py
